examples/bad/map_key_type.mko
fn main() {
    let mut m = make(map[string]int)
    m[1] = 2
}
